--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Run tests
         run: |
           echo "Start the store app"
-          chmod +x ./shopping-store-linux-amd64 &
+          chmod +x ./shopping-store-linux-amd64 && ./shopping-store-linux-amd64 &
           echo "Install dependencies from lockfile"
           npm ci
           echo "Run playwright tests"
